; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_common.c_bt_mesh_free_buf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_common/extr_mesh_common.c_bt_mesh_free_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_buf_simple = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bt_mesh_free_buf(%struct.net_buf_simple* %0) #0 {
  %2 = alloca %struct.net_buf_simple*, align 8
  store %struct.net_buf_simple* %0, %struct.net_buf_simple** %2, align 8
  %3 = load %struct.net_buf_simple*, %struct.net_buf_simple** %2, align 8
  %4 = icmp ne %struct.net_buf_simple* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load %struct.net_buf_simple*, %struct.net_buf_simple** %2, align 8
  %7 = call i32 @osi_free(%struct.net_buf_simple* %6)
  br label %8

8:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @osi_free(%struct.net_buf_simple*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
